kubernetes/apps/auth/openldap/app/phpldapadmin-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ldapadmin-ingress
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`ldapadmin.${SECRET_PUBLIC_DOMAIN}`)"
      kind: Rule
      middlewares:
        - name: chain-authelia-auth
          namespace: auth

      services:
        - name: openldap-phpldapadmin
          namespace: auth
          port: 80
  tls:
    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
